--- a/c/index.html
+++ b/c/index.html
@@ -15,7 +15,9 @@
 
     <!-- Custom styles for this template -->
     <link href="../cover.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style type="text/css">
       .author
@@ -67,15 +69,15 @@
                 <p>I'm an Applied Scientist at <a href="https://aws.amazon.com/" target="_blank">Amazon Web Services (AWS)</a>, working on verifying the <a href="https://awsdocs-neuron.readthedocs-hosted.com/en/latest/compiler/index.html" target="_blank">Neuron Compiler</a>.
                   Before that, I worked as a Formal Verification Tech Lead at <a href="https://www.apple.com/" target="_blank">Apple</a>, working on verifying memory subsystems and fabric interconnects in Apple silicon.
                   I completed a PhD in computer science at MIT CSAIL co-advised by <a href="http://adam.chlipala.net" target="_blank">Adam Chlipala</a> and <a href="http://csg.csail.mit.edu/Users/arvind" target="_blank">Arvind</a>.
-                  During my PhD, I worked on formal verification of hardware using the Coq interactive theorem prover.
+                  During my PhD, I worked on formal verification of hardware using the Coq proof assistant.
                 </p>
                 <p><span class="material-icons md-16">email</span>
                   joonwonc <span class="emph">at</span> alum <span class="emph">dot</span>
                   mit <span class="emph">dot</span> edu
-                  || <span class="material-icons md-16">phone</span> +1-339-225-5940
+                  || <span class="material-icons md-16">phone</span>+1-339-225-5940
                 </p>
-                <p><span class="material-icons md-16">article</span> <a href="./docs/cv.pdf" target="_blank">CV</a>
-                  || <span class="material-icons md-16">work</span><a href="https://github.com/joonwonc" target="_blank">GitHub</a>
+                <p><span class="material-icons md-16">article</span><a href="./docs/cv.pdf" target="_blank"> CV</a>
+                  || <span class="material-icons md-16">work</span><a href="https://github.com/joonwonc" target="_blank"> GitHub</a>
                 </p>
               </div>
             </div>
@@ -93,7 +95,7 @@
                 <li>Feb 2013, B.S. summa cum laude, <a href="http://cse.snu.ac.kr/en"
                     target="_blank"> Department of Computer Science and
                     Engineering</a>, <a href="http://www.useoul.edu/" target="_blank"> Seoul
-                    National University</a><br/>(Double major in Mathematics)</li>
+                    National University</a><br/>(Double major in mathematics)</li>
               </ul>
             </div>
 
