--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
     <!-- Custom styles for this template -->
     <link href="./cover.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style type="text/css">
       .author
@@ -33,7 +35,7 @@
         <div class="cover-container">
           <div class="inner cover">
             <p class="p-heading">Joonwon Choi as</p>
-	    <p class="p-subheading"><a href="./c/index.html">a Formal Verification Engineer at Apple</a></p>
+	    <p class="p-subheading"><a href="./c/index.html">an Applied Scientist at Amazon Web Services (AWS)</a></p>
 	    <p class="p-subheading"><a href="./p/index.html">an Amateur Pianist</a></p>
           </div>
         </div>
