--- a/p/index.html
+++ b/p/index.html
@@ -65,7 +65,7 @@
             <div class="col-xs-12 col-sm-12 col-md-12">
               <p>Besides academic careers, Joonwon also pursues his musical careers as an amateur pianist.</p>
               <p>He studied piano performance for four years as an
-                <a href="http://mta.mit.edu/music/performance/emerson-program" target="_blank">MIT Emerson scholar</a>,
+                <a href="https://mta.mit.edu/music/performance/emersonharris-program-private-study" target="_blank">MIT Emerson scholar</a>,
                 with the instructor <a href="http://necmusic.edu/faculty/marilyn-roth" target="_blank">Marilyn Roth</a>
                 in New England Conservatory.</p>
             </div>
