--- a/c/index.html
+++ b/c/index.html
@@ -62,7 +62,7 @@
               <p class="p-heading">Joonwon Choi</p>
               <div class="col-xs-12 col-sm-4 col-md-4">
                 <p align="center">
-                  <img src="../images/profilec_4.png" width="240" alt="Profile"/>
+                  <img src="../images/profilec.png" width="240" alt="Profile"/>
                 </p>
               </div>
               <div class="col-xs-12 col-sm-8 col-md-8">
