--- a/c/index.html
+++ b/c/index.html
@@ -103,7 +103,10 @@
               <p class="p-subheading">Publication</p>
               <ul>
                 <li><span class="paper">Revamping Verilog Semantics for Foundational Verification</span><br />
-                  <span class="conference">submitted.</span>
+                  [to appear]<br />
+                  <span class="author">Joonwon Choi</span>*, Jaewoo Kim*, and Jeehoon Kang.<br />
+                  (* co-first authors)<br />
+                  <span class="conference">Proceedings of the International Conference on Object-Oriented Programming, Systems, Languages, and Applications (OOPSLA'25). October 2025.</span>
                 </li>
               </ul>
               <ul>
@@ -141,8 +144,9 @@
                     Specification and its Modular Verification</span>
                   [<a href="https://dl.acm.org/doi/10.1145/3110268" target="_blank">paper</a>]
                   [<a href="https://github.com/mit-plv/kami" target="_blank">github</a>]<br />
-                  <span class="author">Joonwon Choi</span>, Muralidaran Vijayaraghavan, Benjamin
+                  <span class="author">Joonwon Choi</span>*, Muralidaran Vijayaraghavan*, Benjamin
                   Sherman, Adam Chlipala, and Arvind.<br />
+                  (* co-first authors)<br />
                   <span class="conference">Proceedings of the ACM SIGPLAN International Conference
                     on Functional Programming (ICFP'17). September 2017.</span>
                 </li>
