--- a/c/index.html
+++ b/c/index.html
@@ -66,10 +66,10 @@
                 </p>
               </div>
               <div class="col-xs-12 col-sm-8 col-md-8">
-                <p>I'm an Applied Scientist at <a href="https://aws.amazon.com/" target="_blank">Amazon Web Services (AWS)</a>, working on verifying the <a href="https://awsdocs-neuron.readthedocs-hosted.com/en/latest/compiler/index.html" target="_blank">Neuron Compiler</a>.
+                <p>I'm an Applied Scientist at <a href="https://aws.amazon.com/" target="_blank">Amazon Web Services (AWS)</a>, working on verifying the <a href="https://awsdocs-neuron.readthedocs-hosted.com/en/latest/compiler/index.html" target="_blank">Neuron</a> Compiler and Kernels.
                   Before that, I worked as a Formal Verification Tech Lead at <a href="https://www.apple.com/" target="_blank">Apple</a>, working on verifying memory subsystems and fabric interconnects in Apple silicon.
                   I completed a PhD in computer science at MIT CSAIL co-advised by <a href="http://adam.chlipala.net" target="_blank">Adam Chlipala</a> and <a href="http://csg.csail.mit.edu/Users/arvind" target="_blank">Arvind</a>.
-                  During my PhD, I worked on formal verification of hardware using the Coq proof assistant.
+                  During my PhD, I worked on formal verification of hardware using the Rocq proof assistant.
                 </p>
                 <p><span class="material-icons md-16">email</span>
                   joonwonc <span class="emph">at</span> alum <span class="emph">dot</span>
@@ -103,15 +103,16 @@
               <p class="p-subheading">Publication</p>
               <ul>
                 <li><span class="paper">Revamping Verilog Semantics for Foundational Verification</span><br />
-                  [to appear]<br />
-                  <span class="author">Joonwon Choi</span>*, Jaewoo Kim*, and Jeehoon Kang.<br />
-                  (* co-first authors)<br />
+                  [<a href="https://dl.acm.org/doi/10.1145/3763084" target="_blank">paper</a>]
+                  [<a href="https://github.com/verilog-proof/VerilRocq" target="_blank">github</a>]<br />
+                  <span class="author">Joonwon Choi</span>*, Jaewoo Kim*, and Jeehoon Kang. (* co-first authors)<br />
                   <span class="conference">Proceedings of the International Conference on Object-Oriented Programming, Systems, Languages, and Applications (OOPSLA'25). October 2025.</span>
+                  <span class="conference">Distinguished Paper Award.</span>
                 </li>
               </ul>
               <ul>
                 <li><span class="paper">Hemiola: A DSL and Verification Tools to Guide Design and
-                    Proof of Hierarchical Cache-Coherence Protocols</span>
+                    Proof of Hierarchical Cache-Coherence Protocols</span><br />
                   [<a href="https://link.springer.com/chapter/10.1007/978-3-031-13188-2_16" target="_blank">paper</a>]
                   [<a href="https://www.youtube.com/watch?v=gUPjsFc5hD4" target="_blank">presentation</a>]
                   [<a href="https://github.com/mit-plv/hemiola" target="_blank">github</a>]<br />
@@ -122,7 +123,7 @@
               </ul>
               <ul>
                 <li><span class="paper">Structural Design and Proof of Hierarchical Cache-Coherence
-                    Protocols</span>
+                    Protocols</span><br />
                   [<a href="https://dspace.mit.edu/handle/1721.1/130759" target="_blank">thesis</a>]<br />
                   <span class="author">Joonwon Choi</span><br />
                   <span class="conference">Ph.D. Thesis in Electrical Engineering and Computer
@@ -131,7 +132,7 @@
               </ul>
               <ul>
                 <li><span class="paper">Integration Verification Across Software and Hardware for a
-                    Simple Embedded System</span>
+                    Simple Embedded System</span><br />
                   [<a href="https://dl.acm.org/doi/abs/10.1145/3453483.3454065" target="_blank">paper</a>]<br />
                   Andres Erbsen, Samuel Gruetter, <span class="author">Joonwon Choi</span>, Clark
                   Wood, and Adam Chlipala.<br />
@@ -141,7 +142,7 @@
               </ul>
               <ul>
                 <li><span class="paper">Kami: A Platform for High-Level Parametric Hardware
-                    Specification and its Modular Verification</span>
+                    Specification and its Modular Verification</span><br />
                   [<a href="https://dl.acm.org/doi/10.1145/3110268" target="_blank">paper</a>]
                   [<a href="https://github.com/mit-plv/kami" target="_blank">github</a>]<br />
                   <span class="author">Joonwon Choi</span>*, Muralidaran Vijayaraghavan*, Benjamin
@@ -153,7 +154,7 @@
               </ul>
               <ul>
                 <li><span class="paper">EverCrypt: A Fast, Verified, Cross-Platform Cryptographic
-                    Provider</span>
+                    Provider</span><br />
                   [<a href="https://ieeexplore.ieee.org/document/9152808" target="_blank">paper</a>]<br />
                   Jonathan Protzenko, Bryan Parno, Aymeric Fromherz, Chris Hawblitzel, Marina
                   Polubelova, Karthikeyan Bhargavan, Benjamin Beurdouche,
@@ -165,7 +166,7 @@
                 </li>
               </ul>
               <ul>
-                <li><span class="paper">Crellvm: Verified Credible Compilation for LLVM</span>
+                <li><span class="paper">Crellvm: Verified Credible Compilation for LLVM</span><br />
                   [<a href="https://dl.acm.org/doi/10.1145/3192366.3192377" target="_blank">paper</a>]<br /> Jeehoon
                   Kang, Yoonseung Kim, Youngju Song, Juneyoung Lee, Sanghoon Park, Mark Dongyeon
                   Shin, Yonghyun Kim, Sungkeun Cho, <span class="author">Joonwon Choi</span>,
@@ -175,7 +176,7 @@
                 </li>
               </ul>
               <ul>
-                <li><span class="paper">An Inlining Approach to Formal Hardware Semantics</span>
+                <li><span class="paper">An Inlining Approach to Formal Hardware Semantics</span><br />
                   [<a href="https://dspace.mit.edu/handle/1721.1/105576" target="_blank">thesis</a>]<br />
                   <span class="author">Joonwon Choi</span><br />
                   <span class="conference">M.S. Thesis in Electrical Engineering and Computer
